refactor search form

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,17 +10,20 @@
               [formGroup]="searchForm" (ngSubmit)="onSubmit()">
                 <div class="fromto df">
                   <select formControlName="cityFrom" 
-                  [ngClass]="searchForm.controls['cityFrom'].value == 'Haradan?' ? 'selected' : ''">
-                  <option selected class="default">{{cityFrom}}</option>
+                  [ngClass]="searchForm.controls['cityFrom'].value == '' ? 'selected' : ''">
+                  <!-- <option selected class="default">{{cityFrom}}</option> -->
+                  <option class="default" label="Haradan?"></option>
                     <option *ngFor="let city of cities" class="link">{{city}}</option> 
                   </select>
+                 
                   <div class="vl"></div>
                 </div>
                 
                 <div class="fromto df">
                   <select formControlName="cityTo"
-                  [ngClass]="searchForm.controls['cityTo'].value == 'Haraya?' ? 'selected' : ''">
-                    <option selected class="selected default">{{cityTo}}</option>
+                  [ngClass]="searchForm.controls['cityTo'].value == '' ? 'selected' : ''">
+                    <!-- <option selected class="selected default">{{cityTo}}</option> -->
+                    <option class="default" label="Haraya?"></option>
                     <option *ngFor="let city of cities" class="link">{{city}}</option> 
                   </select>
                   <div class="vl"></div>
