--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 //   height: 100%;
 // }
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shantell+Sans:wght@800&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shantell+Sans:wght@800&display=swap");
 
 * {
   margin: 0;
