adding route action, update angular

--- a/src/app/components/email-auth/email-auth.component.html
+++ b/src/app/components/email-auth/email-auth.component.html
@@ -1,5 +1,5 @@
 <div class="form-container df mat-elevation-z5">
-    <form [formGroup]="signUpForm" (ngSubmit)="submit()">
+    <form [formGroup]="signUpForm" (ngSubmit)="submit2()">
         <mat-form-field class="w-75" appearance="outline">
             <mat-label>Name</mat-label>
             <input matInput formControlName="name">
