--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,8 @@
   <div class="top-60">
     <router-outlet></router-outlet>
   </div>
-  
+
+  <app-footer></app-footer>
   
   <mat-menu #userMenu="matMenu" class="mat-menu">
     <a mat-menu-item routerLink="publish-ride"  (click)="setUrl()">Publish a ride</a>
