--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,4 +1,10 @@
-
+.section-one h1 {
+    margin-top: 40px;
+    font-size: 34px;
+    text-align: center;
+    font-weight: 600;
+    color: #054652;
+}
 
 .section-two.search-component{
     padding: auto;
@@ -8,7 +14,6 @@
     width: auto;
     max-width: 980px;
 }
-
 
 
 
