--- a/src/styles.scss
+++ b/src/styles.scss
@@ -272,7 +272,7 @@ label {
       height: 100%;
       cursor: pointer;
       padding-left: 16px;
-      color: #11141e;
+      color: #054652;
       // background: -webkit-linear-gradient(#49ee83, rgb(11, 55, 232));
       // background-clip: text;
       // -webkit-text-fill-color: transparent;
@@ -795,7 +795,7 @@ p {
 
 .section-two h1{
   font-size: 26px;
-  margin-bottom: -20px;
+//   margin-bottom: -20px;
 }
 
 .search-result {
@@ -813,9 +813,32 @@ p {
   .label {
     display: none;
   }  
+
+  .top-60 {
+    top: 58px;
+  }
+
+  .nav {
+    height: 58px;
+    
+  .logo {
+    font-size: 24px !important;
+  }
+  }
+
 }
 
 @media (max-width: 590px){
+
+    ._ce892 ._20286 {
+        height: 200px;
+    }
+
+    .home-content {
+        position: absolute;
+        top: 320px;
+    }
+
   .search-result{
       margin: 0;
   }
