update header text

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="_ce892">
         <div class="_20286">
           <div class="section-two df">
-            <h1>Die Fahrten deiner Wahl für wenig Geld</h1>
+            <h1>The trips of your choice for little money</h1>
             
             <div class="form df">
               <form class="search-form df padding" 
