--- a/src/app/components/trip/trip.component.html
+++ b/src/app/components/trip/trip.component.html
@@ -99,7 +99,7 @@
                 <div class="telephone">
                     <a href="'0' + tripDetails[0]?.phone_number">
                         <input class="phone-inpt" 
-                        [(ngModel)]="'0' + tripDetails[0].phone_number"
+                        
                         mask="(000) 000-00-00"
                         [disabled]="true"
                     >
@@ -115,3 +115,5 @@
 
 
 </div>
+
+<!-- [(ngModel)]="'0' + tripDetails[0].phone_number" -->
