--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -96,8 +96,8 @@
             </div>
 
             <div class="sc-f242337d-2 jmwggo">
-              <span>Help us keep you safe from scams</span>
-              <p>At BlaBlaCar, we're working hard to make our platform as secure as it can be. But when scams do happen, 
+              <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</span>
+              <p>At OnRoad, we're working hard to make our platform as secure as it can be. But when scams do happen, 
                 we want you to know exactly how to avoid and report them. Follow our tips to help us keep you safe.
               </p><div class="sc-f242337d-7 kFcrJu">
                 <a href="/scam">
